@@ -24,6 +24,7 @@
 * Fix - Fix for 'Content wider than screen' Google Console issue.
 * Fix - Fixed the undefined notice when using and array of post types with WP_Query
 * Fix - Moving the description text on main Archive pages above the filters.
+* Dev - Adding hierarchy for the Destination sitemap section.
 
 ### 1.3.0 - 2 October 2019
 * Fix - Fixed the Post Type enquiry dropdown.
